--- a/package.json
+++ b/package.json
@@ -6,26 +6,25 @@
   "author": "Jimmy Moon <ragingwind@gmail.com>",
   "license": "Apache License 2.0",
   "private": true,
-  "workspaces": [
-    "site",
-    "packages/*"
-  ],
   "scripts": {
-    "build": "turbo run build --scope=next-k-commerce --include-dependencies --no-deps",
-    "dev": "turbo run dev",
-    "start": "turbo run start",
-    "types": "turbo run types",
-    "prettier-fix": "prettier --write ."
+    "build": "turbo run build",
+    "dev": "turbo run dev --parallel",
+    "lint": "turbo run lint",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
     "husky": "^7.0.4",
     "prettier": "^2.5.1",
-    "turbo": "^1.1.2"
+    "turbo": "latest"
   },
   "husky": {
     "hooks": {
       "pre-commit": "turbo run lint"
     }
   },
-  "packageManager": "yarn@1.22.17"
+  "engines": {
+    "npm": ">=7.0.0",
+    "node": ">=14.0.0"
+  },
+  "packageManager": "pnpm@6.32.3"
 }
