--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,9 +1,14 @@
 {
   "name": "components",
-  "private": true,
-  "version": "1.0.0",
-  "main": "index.js",
-  "dependencies": {
-    "daisyui": "^2.8.0"
+  "version": "0.0.0",
+  "main": "./index.tsx",
+  "types": "./index.tsx",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "tsconfig": "workspace:*",
+    "config": "workspace:*",
+    "typescript": "^4.5.3"
   }
 }
