--- a/turbo.json
+++ b/turbo.json
@@ -1,44 +1,19 @@
 {
-  "baseBranch": "origin/main",
   "pipeline": {
     "build": {
       "dependsOn": [
         "^build"
       ],
       "outputs": [
-        "dist/**"
-      ]
-    },
-    "next-k-commerce#build": {
-      "dependsOn": [
-        "^build"
-      ],
-      "outputs": [
+        "dist/**",
         ".next/**"
       ]
-    },
-    "test": {
-      "dependsOn": [
-        "^build"
-      ],
-      "outputs": []
     },
     "lint": {
       "outputs": []
     },
-    "prettier-fix": {
-      "outputs": []
-    },
     "dev": {
       "cache": false
-    },
-    "start": {
-      "cache": false
-    },
-    "types": {
-      "outputs": [
-        "dist/**/*.d.ts"
-      ]
     }
   }
 }
